# fcqml-classifier

./: .gitignore  README.md  autoencode_pca_comparison.ipynb  split_mnist_poc.ipynb
federated_non_cl_mnist/classical/quickstart-pytorch/: final_model.pt  pyproject.toml
federated_non_cl_mnist/classical/quickstart-pytorch/pytorchexample/: client_app.py  server_app.py  task.py
federated_non_cl_mnist/quantum/quickstart-pytorch/pytorchexample/: client_app.py  server_app.py  task.py
notebooks/: autoencode_pca_comparison.ipynb  encoder_deep.keras
